--- a/app/Artist/app/build.gradle
+++ b/app/Artist/app/build.gradle
@@ -47,4 +47,11 @@ dependencies {
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
 
     compile 'com.bm.photoview:library:1.4.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    // Retrofit库
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    // Okhttp库
+
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
