基本功能、界面、数据请求、ok(perhaps)

--- a/app/Artist/app/build.gradle
+++ b/app/Artist/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     // Okhttp库
 
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile project(':library')
+
+    implementation 'org.litepal.android:java:3.0.0'
 }
