--- a/app/Artist/app/src/main/AndroidManifest.xml
+++ b/app/Artist/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".PresentationLayer.PhotoActivity"></activity>
-        <activity android:name=".PresentationLayer.GalleryActivity" />
+        <activity android:name=".PresentationLayer.StyleMigrationActivity" />
         <activity android:name=".PresentationLayer.CameraActivity" />
         <activity android:name=".PresentationLayer.MainActivity">
             <intent-filter>
