--- a/app/Artist/app/src/main/AndroidManifest.xml
+++ b/app/Artist/app/src/main/AndroidManifest.xml
@@ -23,13 +23,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".PresentationLayer.GuideActivity">
+
+        </activity>
+        <activity android:name=".PresentationLayer.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PresentationLayer.SplashActivity"></activity>
         <activity android:name=".PresentationLayer.MainActivity"></activity>
 
         <activity android:name=".PresentationLayer.CameraActivity" />
