--- a/app/Artist/app/build.gradle
+++ b/app/Artist/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:28.0.0'
 
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -62,4 +63,11 @@ dependencies {
     implementation project(':library')
 
     implementation 'org.litepal.android:java:3.0.0'
+
+    implementation 'com.github.zomato:androidphotofilters:1.0.2'
+    implementation 'com.github.yalantis:ucrop:2.2.4'
+
+    implementation 'cn.finalteam:galleryfinal:1.4.8.7'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'it.chengdazhi.styleimageview:styleimageview:1.0.4'
 }
